--- a/tuxlite_tbs/templates/base.html
+++ b/tuxlite_tbs/templates/base.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="{{ SITEURL }}/theme/html5.js"></script>
     <![endif]-->
-
+    <link rel="shortcut icon" href="{{SITEURL}}/static/images/favicon.png">
     <!-- Le styles -->
     <link href="{{ SITEURL }}/theme/bootstrap.min.css" rel="stylesheet">
     <link href="{{ SITEURL }}/theme/bootstrap.min.responsive.css" rel="stylesheet">
