--- a/tuxlite_tbs/static/local.css
+++ b/tuxlite_tbs/static/local.css
@@ -30,6 +30,20 @@ p { font-size: 100%; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0.8em
 li { line-height: 1.6em; }
 h3 { margin-top: 2.5em; }
 
+#CenterContainer{
+    width: 72%;
+    padding: 20px;
+    background: #fff;
+    box-shadow: 0 0 15px #333;
+    -moz-box-shadow: 0 0 15px #333;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    display: block;
+}
+
 /* Styling for articles */
 .article { padding-bottom:20px; padding-right: 40px; }
 .content-title { margin-bottom: 30px; }
@@ -432,8 +446,8 @@ h3 { margin-top: 2.5em; }
 
 .article table th,
 .article table td {
-  padding: 0px 0px;
-  border: 0px solid #ddd;
+  padding: 5px 5px;
+  border: 1px solid #ddd;
 }
 
 .article table tr {
