--- a/tuxlite_tbs/templates/base.html
+++ b/tuxlite_tbs/templates/base.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="CenterContainer">
     <div class="content">
     <div class="row">
 
